// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Banner > renders 1`] = `
<div>
  <div
    class="banner relative w-full p-12 text-center rounded-lg bg-bluedot-lighter"
  >
    <h1
      class="banner__title text-bluedot-normal font-serif font-normal text-2xl"
    >
      Test Banner
    </h1>
    <form
      class="banner__form flex flex-col items-center gap-4 mt-6"
    />
  </div>
</div>
`;

exports[`Banner > renders with input and button 1`] = `
<div>
  <div
    class="banner relative w-full p-12 text-center rounded-lg bg-bluedot-lighter"
  >
    <h1
      class="banner__title text-bluedot-normal font-serif font-normal text-2xl"
    >
      Test Banner
    </h1>
    <form
      class="banner__form flex flex-col items-center gap-4 mt-6"
    >
      <input
        class="banner__input p-2 rounded border font-sans text-base font-normal text-center w-80"
        placeholder="you@example.com"
        type="text"
        value=""
      />
      <button
        class="cta-button flex items-center justify-center rounded-lg transition-all duration-200 font-semibold text-base px-4 py-2 w-fit cta-button--primary bg-bluedot-normal link-on-dark banner__submit-btn"
        data-testid="cta-button"
        type="submit"
      >
        <span
          class="cta-button__text"
        >
          Submit
        </span>
      </button>
    </form>
  </div>
</div>
`;
